// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header has a none string title 1`] = `
<Header
  subtitle=""
  suffix=""
  title={
    <span>
      Hello
    </span>
  }
>
  <div>
    <styled.div>
      <div
        className="sc-AykKF ldcSwj"
      >
        <div>
          <span
            data-hook="title"
          >
            <span>
              Hello
            </span>
          </span>
          <span
            data-hook="subtitle"
          />
        </div>
      </div>
    </styled.div>
    <Divider>
      <styled.div>
        <div
          className="sc-AykKC gkeoBG"
        />
      </styled.div>
    </Divider>
  </div>
</Header>
`;

exports[`Header has a title and subtitle 1`] = `
<Header
  subtitle="Some Subtitle"
  suffix=""
  title="Some Title"
>
  <div>
    <styled.div>
      <div
        className="sc-AykKF ldcSwj"
      >
        <div>
          <Heading
            appearance="H3"
            dataHook="title"
          >
            <styled.h1
              as="h3"
            >
              <h3
                className="sc-AykKD fkvLCn"
              >
                Some Title
              </h3>
            </styled.h1>
          </Heading>
          <Text
            dataHook="subtitle"
            secondary={false}
            size="medium"
            tagName="span"
            weight="thin"
          >
            <styled.span
              as="span"
              secondary={false}
              size="medium"
              weight="thin"
            >
              <span
                className="sc-AykKE ioxiWY"
                size="medium"
              >
                Some Subtitle
              </span>
            </styled.span>
          </Text>
        </div>
      </div>
    </styled.div>
    <Divider>
      <styled.div>
        <div
          className="sc-AykKC gkeoBG"
        />
      </styled.div>
    </Divider>
  </div>
</Header>
`;

exports[`Header has a title and subtitle and suffix 1`] = `
<Header
  subtitle="Some Subtitle"
  suffix="A Suffix"
  title="Some Title"
>
  <div>
    <styled.div>
      <div
        className="sc-AykKF ldcSwj"
      >
        <div>
          <Heading
            appearance="H3"
            dataHook="title"
          >
            <styled.h1
              as="h3"
            >
              <h3
                className="sc-AykKD fkvLCn"
              >
                Some Title
              </h3>
            </styled.h1>
          </Heading>
          <Text
            dataHook="subtitle"
            secondary={false}
            size="medium"
            tagName="span"
            weight="thin"
          >
            <styled.span
              as="span"
              secondary={false}
              size="medium"
              weight="thin"
            >
              <span
                className="sc-AykKE ioxiWY"
                size="medium"
              >
                Some Subtitle
              </span>
            </styled.span>
          </Text>
        </div>
        <styled.div>
          <div
            className="sc-AykKG jTITOG"
          >
            A Suffix
          </div>
        </styled.div>
      </div>
    </styled.div>
    <Divider>
      <styled.div>
        <div
          className="sc-AykKC gkeoBG"
        />
      </styled.div>
    </Divider>
  </div>
</Header>
`;

exports[`Header should render 1`] = `
<Header
  subtitle=""
  suffix=""
  title="Some Title"
>
  <div>
    <styled.div>
      <div
        className="sc-AykKF ldcSwj"
      >
        <div>
          <Heading
            appearance="H3"
            dataHook="title"
          >
            <styled.h1
              as="h3"
            >
              <h3
                className="sc-AykKD fkvLCn"
              >
                Some Title
              </h3>
            </styled.h1>
          </Heading>
          <span
            data-hook="subtitle"
          />
        </div>
      </div>
    </styled.div>
    <Divider>
      <styled.div>
        <div
          className="sc-AykKC gkeoBG"
        />
      </styled.div>
    </Divider>
  </div>
</Header>
`;
